--- a/index.css
+++ b/index.css
@@ -258,7 +258,7 @@ p {
 }
 
 .portfolio .grid-wrapper .grid-box:hover .hover {
-    box-shadow: 0  0 30px rgb(193, 189, 189);
+    box-shadow: 0 0 30px rgb(193, 189, 189);
     transform: scaleX(1);
 }
 
@@ -275,4 +275,130 @@ p {
     right: -18%;
     z-index: -1;
 }
+
+/** Testimonials **/
+
+.testimonials {
+    margin-top: 120px;
+    background-color: var(--light-pink);
+    padding: 60px 0px;
+}
+
+.testimonials .title {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.testimonials .title h3 {
+    text-transform: uppercase;
+    color: var(--grey);
+}
+
+.testimonials .title h1 {
+    color: var(--h1);
+}
+
+.testimonials .grid-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+    gap: 40px;
+}
+
+.testimonials .grid-wrapper .grid-box {
+    background-color: whitesmoke;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 0px rgb(121, 120, 120)
+}
+
+.testimonials .grid-wrapper .grid-box img {
+    display: block;
+    margin-top: -80px;
+    margin-bottom: 40px;
+    transition: transform 0.5 ease;
+}
+
+.testimonials .grid-wrapper .grid-box .fa-quote-left {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.testimonials .grid-wrapper .grid-box p {
+    color: var(--grey);
+    margin: 20px 0px;
+}
+
+.testimonials .grid-wrapper .grid-box h4 {
+    font-weight: bold;
+    color: var(--dark-purple);
+}
+
+.testimonials .grid-wrapper .grid-box .rating .rating-blue {
+    color: var(--blue);
+}
+
+.testimonials .grid-wrapper .grid-box:hover img {
+    transform: scale(1.2);
+}
+
+/** Contact **/
+.contact .container {
+    background-color: #E9F9FF;
+    margin-top: 80px;
+    padding: 60px 60px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.contact .container h3 {
+    color: var(--grey);
+    text-transform: uppercase;
+}
+
+.contact .container h1 {
+    color: var(--h1);
+    margin: 20px 0px;
+}
+
+.contact .container .fa-envelope-o {
+    font-size: 25px;
+    color: var(--blue);
+    margin-right: 10px;
+}
+
+.contact .container .email-contact {
+    color: var(--grey);
+}
+
+.contact .container .links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.contact .container .links ul {
+    display: flex;
+}
+
+.contact .container .links ul li {
+    margin: 0px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    color: var(--dark-purple);
+}
+
+/**Copyright**/
+.copyright h3 {
+    color: var(--h1);
+    font-weight: bold;
+    text-align: center;
+}
+
+
+
 
