--- a/index.css
+++ b/index.css
@@ -165,8 +165,8 @@ p {
 
 .skills .grid-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, auto));
-    gap: 0px;
+    grid-template-columns: repeat(auto-fit, minmax(600px, auto));
+    gap: 10px;
 }
 
 .skills .grid-wrapper .grid-box .icon-title {
@@ -270,9 +270,10 @@ p {
     width: 600px;
     height: 300px;
     background-color: var(--light-pink);
+    border-radius: 40px;
     position: absolute;
-    top: -6%;
-    right: -18%;
+    top: -10%;
+    right: -14%;
     z-index: -1;
 }
 
