--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body,
 html {
     font-family: "Poppins", Arial, Helvetica;
     overflow-x: hidden;
+    position: relative;
 }
 
 a {
@@ -75,17 +76,13 @@ p {
 }
 
 /** Navbar **/
-
 .navbar {
+    position: relative;
     width: 100%;
     padding: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.navbar .brand img {
-    display: block;
 }
 
 .navbar .nav-list ul,
@@ -99,6 +96,19 @@ p {
     font-size: 18px;
     cursor: pointer;
     color: var(--dark-purple);
+}
+
+.toggle-btn i {
+    font-size: 30px;
+    color: var(--dark-purple);
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: none;
+}
+
+.brand-mobile {
+    display: none;
 }
 
 /** Header Container **/
@@ -238,6 +248,7 @@ p {
 
 .portfolio .grid-wrapper .grid-box {
     position: relative;
+    border-radius: 10px;
 }
 
 .portfolio .grid-wrapper .grid-box .hover {
