--- a/mobile.css
+++ b/mobile.css
@@ -32,6 +32,10 @@
         margin-top: 30px;
     }
 
+    .active-navbar-mobile {
+        display: flex;
+    }
+
     /** Header **/
     header .row .col-1 h1 {
         font-size: 30px;
@@ -40,6 +44,11 @@
     .header {
         height: 100%;
         margin-top: 60px;
+    }
+
+    .header .cricle {
+        top: -5%;
+        right: -42%;
     }
 
     .header .row {
@@ -78,46 +87,28 @@
 
 
     /** Portfolio **/
-    .portfolio {
-        margin-top: 60px;
-    }
-
     .portfolio .rectangle {
-        width: 220px;
-        height: 60px;
-        top: 16px;
-        right: -12px;
-    }
-
-    .portfolio .title .cta-title h1 {
-        font-size: 26px;
-        margin-right: 20px;
-    }
-
-    .portfolio .title .cta-title h4 {
-        font-size: 12px;
+        width: 60%;
+        height: 10%;
+        top: 5%;
+        right: -16%;
     }
 
     .portfolio .grid-wrapper {
         grid-template-columns: repeat(auto-fit, minmax(250px, auto));
-        gap: 60px;
+        gap: 30px;
     }
 
-    .portfolio .grid-wrapper .grid-box {
-        margin: 0 auto;
-    }
-
-    .portfolio .grid-wrapper .grid-box:hover {
-        border-radius: 10px;
-        box-shadow: 30px 0px 30px 0px rgb(153, 151, 151);
+    .portfolio .grid-wrapper img {
+        width: 100%;
     }
 
     .portfolio .grid-wrapper .grid-box .hover {
-        top: 16%;
+        width: 92%;
         left: 6%;
-        width: 90%;
-        height: 58%;
+        top: 20%;
     }
+
 
     /** Testimonials **/
     .testimonials .grid-wrapper .grid-box {
